// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`src/openapi/openapi Binary binary all options 1`] = `
Object {
  "info": Object {
    "contact": Object {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": Object {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": Object {
    "/health": Object {
      "get": Object {
        "description": "Service healthcheck endpoint",
        "operationId": "repeated",
        "responses": Object {
          "200": Object {
            "content": Object {
              "text-plain": Object {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Healthcheck",
        "tags": Array [
          "Internals",
        ],
      },
    },
    "/test": Object {
      "get": Object {
        "description": "Test endpoint",
        "operationId": "id",
        "parameters": Array [
          Object {
            "description": "some binary base64 value (min:512 chars, max:1024 chars, binary string)",
            "example": "c2FtcGxlMQ==",
            "in": "query",
            "name": "base64string",
            "required": true,
            "schema": Object {
              "default": "c2FtcGxlMQ==",
              "description": "some binary base64 value (min:512 chars, max:1024 chars, binary string)",
              "format": "binary",
              "maxLength": 1024,
              "minLength": 512,
              "nullable": true,
              "type": "string",
            },
          },
        ],
        "responses": Object {
          "200": Object {
            "content": Object {
              "text-plain": Object {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": Array [
          "Internals",
        ],
      },
    },
  },
  "servers": Array [
    Object {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Binary binary all options, declared as parameter 1`] = `
Object {
  "components": Object {
    "parameters": Object {
      "arrayParameter": Object {
        "description": "some string array parameter",
        "in": "query",
        "name": "arrayParameter",
        "required": true,
        "schema": Object {
          "description": "some string array parameter",
          "items": Object {
            "description": "Parameter without description.",
            "type": "string",
          },
          "nullable": true,
          "type": "array",
        },
      },
      "base64string": Object {
        "description": "some binary base64 value (min:512 chars, max:1024 chars, binary string)",
        "example": "c2FtcGxlMQ==",
        "in": "query",
        "name": "base64string",
        "required": true,
        "schema": Object {
          "default": "c2FtcGxlMQ==",
          "description": "some binary base64 value (min:512 chars, max:1024 chars, binary string)",
          "format": "binary",
          "maxLength": 1024,
          "minLength": 512,
          "nullable": true,
          "type": "string",
        },
      },
      "base64string2": Object {
        "description": "some binary base64 value (min:512 chars, max:1024 chars, binary string)",
        "example": "c2FtcGxlMQ==",
        "in": "query",
        "name": "base64string2",
        "required": true,
        "schema": Object {
          "default": "c2FtcGxlMQ==",
          "description": "some binary base64 value (min:512 chars, max:1024 chars, binary string)",
          "format": "binary",
          "maxLength": 1024,
          "minLength": 512,
          "nullable": true,
          "type": "string",
        },
      },
      "booleanParameter": Object {
        "description": "some boolean parameter",
        "in": "query",
        "name": "booleanParameter",
        "required": true,
        "schema": Object {
          "description": "some boolean parameter",
          "nullable": true,
          "type": "boolean",
        },
      },
      "dateTimeParameter": Object {
        "description": "some datetime parameter (max:25 chars, ISO8601 date-time format)",
        "in": "query",
        "name": "dateTimeParameter",
        "required": true,
        "schema": Object {
          "description": "some datetime parameter (max:25 chars, ISO8601 date-time format)",
          "format": "date-time",
          "maxLength": 25,
          "minLength": 16,
          "nullable": true,
          "type": "string",
        },
      },
      "numberParameter": Object {
        "description": "some number parameter",
        "in": "query",
        "name": "numberParameter",
        "required": true,
        "schema": Object {
          "description": "some number parameter",
          "format": "double",
          "nullable": true,
          "type": "number",
        },
      },
    },
  },
  "info": Object {
    "contact": Object {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": Object {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": Object {
    "/health": Object {
      "get": Object {
        "description": "Service healthcheck endpoint",
        "operationId": "repeated",
        "responses": Object {
          "200": Object {
            "content": Object {
              "text-plain": Object {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Healthcheck",
        "tags": Array [
          "Internals",
        ],
      },
    },
    "/test": Object {
      "get": Object {
        "description": "Test endpoint",
        "operationId": "id",
        "parameters": Array [
          Object {
            "$ref": "#/components/parameters/base64string",
          },
          Object {
            "$ref": "#/components/parameters/base64string2",
          },
          Object {
            "$ref": "#/components/parameters/dateTimeParameter",
          },
          Object {
            "$ref": "#/components/parameters/numberParameter",
          },
          Object {
            "$ref": "#/components/parameters/booleanParameter",
          },
          Object {
            "$ref": "#/components/parameters/arrayParameter",
          },
        ],
        "responses": Object {
          "200": Object {
            "content": Object {
              "text-plain": Object {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": Array [
          "Internals",
        ],
      },
    },
  },
  "servers": Array [
    Object {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Binary binary all options, declared as parameter should throw an exception, because parameter has 2 variations 1`] = `
Object {
  "components": Object {
    "parameters": Object {
      "base64string": Object {
        "description": "some binary base64 value (min:512 chars, max:1024 chars, binary string)",
        "example": "c2FtcGxlMQ==",
        "in": "query",
        "name": "base64string",
        "required": true,
        "schema": Object {
          "default": "c2FtcGxlMQ==",
          "description": "some binary base64 value (min:512 chars, max:1024 chars, binary string)",
          "format": "binary",
          "maxLength": 1024,
          "minLength": 512,
          "nullable": true,
          "type": "string",
        },
      },
    },
  },
  "info": Object {
    "contact": Object {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": Object {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": Object {
    "/health": Object {
      "get": Object {
        "description": "Service healthcheck endpoint",
        "operationId": "repeated",
        "responses": Object {
          "200": Object {
            "content": Object {
              "text-plain": Object {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Healthcheck",
        "tags": Array [
          "Internals",
        ],
      },
    },
    "/test": Object {
      "get": Object {
        "description": "Test endpoint",
        "operationId": "id",
        "parameters": Array [
          Object {
            "$ref": "#/components/parameters/base64string",
          },
        ],
        "responses": Object {
          "200": Object {
            "content": Object {
              "text-plain": Object {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": Array [
          "Internals",
        ],
      },
    },
    "/testValid": Object {
      "get": Object {
        "description": "Test endpoint",
        "operationId": "id2",
        "parameters": Array [
          Object {
            "$ref": "#/components/parameters/base64string",
          },
        ],
        "responses": Object {
          "200": Object {
            "content": Object {
              "text-plain": Object {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": Array [
          "Internals",
        ],
      },
    },
  },
  "servers": Array [
    Object {
      "url": "https://server.com",
    },
  ],
}
`;

exports[`src/openapi/openapi Binary binary simple 1`] = `
Object {
  "info": Object {
    "contact": Object {
      "email": "nelson.ricardo.gomes@gmail.com",
    },
    "description": "Some test api",
    "license": Object {
      "name": "Apache 2.0",
      "url": "http://www.apache.org/licenses/LICENSE-2.0.html",
    },
    "termsOfService": "http://swagger.io/terms/",
    "title": "Server API",
    "version": "1.0.0",
  },
  "openapi": "3.0.3",
  "paths": Object {
    "/health": Object {
      "get": Object {
        "description": "Service healthcheck endpoint",
        "operationId": "repeated",
        "responses": Object {
          "200": Object {
            "content": Object {
              "text-plain": Object {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Healthcheck",
        "tags": Array [
          "Internals",
        ],
      },
    },
    "/test": Object {
      "get": Object {
        "description": "Test endpoint",
        "operationId": "id",
        "parameters": Array [
          Object {
            "description": "Parameter without description. (binary string)",
            "in": "query",
            "name": "base64string",
            "required": false,
            "schema": Object {
              "description": "Parameter without description. (binary string)",
              "format": "binary",
              "type": "string",
            },
          },
        ],
        "responses": Object {
          "200": Object {
            "content": Object {
              "text-plain": Object {},
            },
            "description": "Successful operation.",
          },
        },
        "summary": "Server Test",
        "tags": Array [
          "Internals",
        ],
      },
    },
  },
  "servers": Array [
    Object {
      "url": "https://server.com",
    },
  ],
}
`;
